# Maserati

./: .env.example  .gitignore  AGENTS.md  README.md  manage.py  pyproject.toml
apps/ai_review/: __init__.py  apps.py  models.py  services.py
apps/alerts/: apps.py  channels.py  models.py  services.py  tasks.py
apps/audit/: apps.py  models.py  services.py
apps/binance_account_sync/: apps.py  models.py  selectors.py
apps/binance_gateway/: account_read.py  apps.py  fill_query.py  order_cancel.py  order_status.py  order_submission.py  public_market.py  types.py
apps/deepseek_gateway/: __init__.py  apps.py  review.py  types.py
apps/execution/: __init__.py  apps.py  models.py
apps/execution_preparation/: __init__.py  (+3 more)
config/: celery.py  settings.py  urls.py
tests/: test_ai_review_stage7.py  test_alerts_audit_runtime_config.py  test_binance_account_sync_stage3.py  test_binance_gateway_stage3.py  test_deepseek_gateway_stage7.py  test_execution_order_submission_stage5.py  test_execution_preparation_stage4.py  test_fill_sync_stage5.py  test_foundation_settings.py  test_market_data_stage1.py  test_mysql_schema_design.py  test_notifications_stage6.py  test_ops_console_stage7.py  test_orchestration_runtime_stage6.py  test_order_cycle_closeout_stage5.py  test_order_lifecycle_pipeline_stage5.py  test_order_lifecycle_sync_stage5.py  test_order_plan_stage4.py  test_order_status_sync_stage5.py  test_performance_metrics_stage7.py  test_price_snapshot_stage3.py  test_review_dataset_stage7.py  test_risk_check_stage4.py  test_runtime_guard_stage6.py  test_system_checks.py
(+449 files in other folders)
