[project]
name = "the-cypto"
version = "0.1.0"
description = "中低频趋势跟踪自动交易系统"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django>=5.2,<5.3",
    "celery[redis]>=5.6,<5.7",
    "django-redis>=5.4,<6.0",
    "mysqlclient>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = "-ra"

